@@ -1,0 +1,85 @@
+/********************************************************************************
+ * CruiseControl, a Continuous Integration Toolkit
+ * Copyright (c) 2001, ThoughtWorks, Inc.
+ * 651 W Washington Ave. Suite 600
+ * Chicago, IL 60661 USA
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ *     + Redistributions of source code must retain the above copyright
+ *       notice, this list of conditions and the following disclaimer.
+ *
+ *     + Redistributions in binary form must reproduce the above
+ *       copyright notice, this list of conditions and the following
+ *       disclaimer in the documentation and/or other materials provided
+ *       with the distribution.
+ *
+ *     + Neither the name of ThoughtWorks, Inc., CruiseControl, nor the
+ *       names of its contributors may be used to endorse or promote
+ *       products derived from this software without specific prior
+ *       written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+ * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+ * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE REGENTS OR
+ * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+ * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+ * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+ * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+ * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+ * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+ * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ ********************************************************************************/
+package net.sourceforge.cruisecontrol.taglib;
+
+import java.io.File;
+
+import javax.servlet.jsp.JspException;
+
+import net.sourceforge.cruisecontrol.BuildInfo;
+
+
+/**
+ * Check to see if ther are at least the number of builds as defined in startingBuildNumber.  If it does not, then
+ * do not evauluate the body of the tag.
+ */
+public class NavigationCountTag extends CruiseControlBodyTagSupport {
+    public static final String LINK_TEXT_ATTR = "linktext";
+    public static final String LOG_FILE_ATTR = "logfile";
+    public static final String BUILD_INFO_ATTR = "buildinfo";
+
+    private int startingBuildNumber = 0;
+    private int count;
+    private BuildInfo[] buildInfo; // the log files in the log directory.
+
+    public int doStartTag() throws JspException {
+        BuildInfo [] logFileNames = findLogFiles();
+
+        count = logFileNames.length;
+        //sort links...
+//        Arrays.sort(logFileNames, new ReversedComparator());
+//        buildInfo = logFileNames;
+        if (count > startingBuildNumber) {
+            return EVAL_BODY_INCLUDE;
+        } else {
+            return SKIP_BODY;
+        }
+    }
+
+    private BuildInfo[] findLogFiles() throws JspException {
+        File logDir = findLogDir();
+        return BuildInfo.loadFromDir(logDir).asArray();
+    }
+
+    public int getStartingBuildNumber() {
+        return startingBuildNumber;
+    }
+
+    public void setStartingBuildNumber(int startingBuildNumber) {
+        this.startingBuildNumber = startingBuildNumber;
+    }
+}
