@@ -1,0 +1,100 @@
+/********************************************************************************
+ * CruiseControl, a Continuous Integration Toolkit
+ * Copyright (c) 2001, ThoughtWorks, Inc.
+ * 651 W Washington Ave. Suite 600
+ * Chicago, IL 60661 USA
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ *     + Redistributions of source code must retain the above copyright
+ *       notice, this list of conditions and the following disclaimer.
+ *
+ *     + Redistributions in binary form must reproduce the above
+ *       copyright notice, this list of conditions and the following
+ *       disclaimer in the documentation and/or other materials provided
+ *       with the distribution.
+ *
+ *     + Neither the name of ThoughtWorks, Inc., CruiseControl, nor the
+ *       names of its contributors may be used to endorse or promote
+ *       products derived from this software without specific prior
+ *       written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+ * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+ * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE REGENTS OR
+ * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+ * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+ * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+ * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+ * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+ * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+ * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ ********************************************************************************/
+package net.sourceforge.cruisecontrol.taglib;
+
+import java.io.File;
+import java.io.IOException;
+import java.util.Locale;
+
+import javax.servlet.jsp.JspException;
+import javax.servlet.jsp.tagext.BodyTag;
+
+import junit.framework.TestCase;
+import net.sourceforge.cruisecontrol.mock.MockBodyContent;
+import net.sourceforge.cruisecontrol.mock.MockPageContext;
+import net.sourceforge.cruisecontrol.mock.MockServletConfig;
+import net.sourceforge.cruisecontrol.mock.MockServletRequest;
+
+public class NavigationCountTagTest extends TestCase {
+    private NavigationCountTag tag;
+    private MockPageContext pageContext;
+    private File[] logFiles;
+    private File logDir;
+
+    public void setUp() throws IOException {
+        tag = new NavigationCountTag();
+        pageContext = new MockPageContext();
+        MockServletRequest request = new MockServletRequest("context", "servlet");
+        request.setLocale(Locale.US);
+        pageContext.setHttpServletRequest(request);
+
+        tag.setPageContext(pageContext);
+        tag.setBodyContent(new MockBodyContent());
+
+        logDir = new File("testresults/NavigationTagTest");
+        if (!logDir.exists()) {
+            assertTrue("Failed to create test result dir", logDir.mkdirs());
+        }
+        final MockServletConfig servletConfig = (MockServletConfig) pageContext.getServletConfig();
+        servletConfig.setInitParameter("logDir", logDir.getAbsolutePath());
+
+        logFiles = new File[] { new File(logDir, "log20020222120000.xml"), new File(logDir, "log20020223120000.xml"),
+                                new File(logDir, "log20020224120000.xml"), new File(logDir, "log20020225120000.xml") };
+        for (int i = 0; i < logFiles.length; i++) {
+            File logFile = logFiles[i];
+            logFile.createNewFile();
+        }
+    }
+
+    protected void tearDown() throws Exception {
+        for (int i = 0; i < logFiles.length; i++) {
+            logFiles[i].delete();
+        }
+        logDir.delete();
+    }
+
+    
+    public void testIncludeBody() throws Exception {
+        tag.setStartingBuildNumber(2);
+        assertEquals(BodyTag.EVAL_BODY_INCLUDE, tag.doStartTag());
+    }
+
+    public void testDoNotIncludeBody() throws JspException {
+        tag.setStartingBuildNumber(5);
+        assertEquals(BodyTag.SKIP_BODY, tag.doStartTag());
+    }
+}
