@@ -100,6 +100,23 @@
         </attribute>
     </tag>
     <tag>
+        <name>navCount</name>
+        <tag-class>net.sourceforge.cruisecontrol.taglib.NavigationCountTag</tag-class>
+        <body-content>JSP</body-content>
+        <description>
+            Includes the body of the tag if there are atleast the given number of builds
+        </description>
+        <attribute>
+            <name>project</name>
+            <required>false</required>
+            <rtexprvalue>true</rtexprvalue>
+        </attribute>
+        <attribute>
+            <name>startingBuildNumber</name>
+            <required>true</required>
+        </attribute>
+    </tag>
+    <tag>
         <name>projectnav</name>
         <tag-class>net.sourceforge.cruisecontrol.taglib.ProjectNavigationTag</tag-class>
         <tei-class>net.sourceforge.cruisecontrol.taglib.ProjectNavigationTagExtraInfo</tei-class>
